Project

General

Profile

Actions

Bug #20121

closed

rgw_file: missing lock protection for readdir against gc

Added by Hecheng Gui almost 7 years ago. Updated about 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
rgw
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The state.mtx protects state.events accessed both from readdir and gc.

Actions #1

Updated by Hecheng Gui almost 7 years ago

The state.mtx protects state.events accessed both from readdir and gc.

Actions #3

Updated by Nathan Cutler almost 7 years ago

  • Status changed from New to Fix Under Review
Actions #4

Updated by Daniel Gryniewicz about 4 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF