rgw_file: add lock protection for readdir against gc

The state.mtx protects state.events accessed both from readdir and gc.
Fixes: http://tracker.ceph.com/issues/20121

Signed-off-by: Gui Hecheng <guihecheng@cmss.chinamobile.com>